# gaspi

./: README.md
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
gaspi/: .env  Cargo.toml  pi.env
gaspi/.cargo/: config.toml
gaspi/src/: device.rs  main.rs
