[package]
name = "gaspi"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.33.1"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
serde_json = "1.0.96"
openssl-sys = "0.9.106"
openssl-macros = "0.1.1"
openssl = { version = "0.10", features = ["vendored"] }